src/objects/Contact__c.object
<CustomObject>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent</label>
        <referenceTo>Contact__c</referenceTo>
        <relationshipLabel>Contacts (Parent)</relationshipLabel>
        <relationshipName>Contacts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Visit__c</fullName>
        <label>Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Contact</label>
    <nameField>
        <label>Contact Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>